# ExtractPointCloud

./: .gitignore  CMakeLists.txt  extract_point.py  readme.md  test.py
data/: 000001.pcd
include/: extract_point_cloud.h
output/: 000001Truck0.pcd
src/: CMakeLists.txt  extract_point_cloud.cpp  main.cpp  test.cpp
